@startuml

entity User {
    * name : String
    * email : String
    * password : String
    * phone number : String 
    + user_id : PK
}

entity Dentist {
    * name : String
    * yearsOfExperience : Number
    * areaOfExpertise : String
    + dentist_id : PK
}

entity Appointment {
    * apptDate : Date
    * createdAt : Date
    + appointment_id : PK
    + user_id : FK
    + dentist_id : FK
}

User |o--|| Appointment 
Dentist }o--|| Appointment 

@enduml